Fifty fifty reverse fix on mobile. footer and btn fixes.

--- a/src/css/components/_components.buttons.scss
+++ b/src/css/components/_components.buttons.scss
@@ -76,6 +76,7 @@
   }
 
   .btn--outline-primary {
+    background-color: transparent;
     border-color: $color-btn-outline--primary;
 
     @include hocus {
@@ -100,7 +101,18 @@
   }
 }
 
+.btn--outline-light {
+  background-color: transparent;
+  color: $color-btn-outline--light;
+  border-color: $color-btn-border-outline--light;
+
+  @include hocus {
+    border-color: darken($color-btn-border-outline--light, 9%);
+  }
+}
+
 .btn--outline-secondary {
+  background-color: transparent;
   border-color: $color-btn-outline--secondary;
 
   @include hocus {
@@ -121,6 +133,7 @@
 }
 
 .btn--outline-accent {
+  background-color: transparent;
   border-color: $color-btn-outline--accent;
   @include hocus {
     border-color: darken($color-btn-outline--accent, 9%);
