--- a/src/css/components/_components.social-list.scss
+++ b/src/css/components/_components.social-list.scss
@@ -2,6 +2,7 @@
   list-style: none;
   padding: 0;
   margin: 0;
+  margin-bottom: 20px;
   font-size: 25px;
 }
 
